--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     },
     "require": {
-        "php": ">=7.0",
+        "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
+        "php": "^8.2|^8.3|^8.4",
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/http": "^8.0|^9.0|^10.0|^11.0"
     },
